# vibe-skilling

./: .gitignore  AGENTS.md  PRD.md  README.md  codex-output-schema.json  codex-reader.js  render.yaml  review_prompt.md
.github/workflows/: codex-code-review.yml
backend/: README.md  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/api/: router.py
backend/src/backend/api/routes/: codex.py  conversation.py  orchestrator.py  sessions.py
backend/src/backend/codex/: __init__.py  codex_headless.py  history.py  orchestrator.py
backend/src/backend/codex/schemas/: insights.schema.json  proposal.schema.json
backend/src/backend/core/: config.py
backend/src/backend/services/: conversation_store.py  skill_suggester.py
backend/tests/: test_codex_history.py  test_codex_routes.py  test_health.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: setup-codex-render-mcp.sh
specs/: self-improving-codex-skills.md
